# apiserver/swagger/apiV1.yaml
@@ -197,8 +197,6 @@ tags:
     description: Authentication
   - name: Users
     description: User Management
-    security:
-      - bearerAuth: []
   - name: Roles
     description: Role Management
   - name: Makes
@@ -209,6 +207,8 @@ tags:
     description: Post Management
   - name: Access Keys
     description: Access-key Management
+  - name: System
+    description: System Management
 
 paths:
 
@@ -801,3 +801,46 @@ paths:
         "500":
           description: "Internal server error"
 
+  /system:
+    get:
+      summary: "Get system status"
+      description: "Get system status."
+      tags: [System]
+      responses:
+        "200":
+          description: "Status ok"
+        "500":
+          description: "System failure"
+
+  /system/suspendsystem:
+    get:
+      summary: "Set system suspend."
+      description: "Set system suspend. Login service will be disabled. This API is only for admin."
+      tags: [System]
+      responses:
+        "200":
+          description: "Set system suspend ok"
+        "500":
+          description: "System failure"
+
+  /system/suspendkey:
+    get:
+      summary: "Set access key system suspend."
+      description: "Set system suspend. Login with access key service will be disabled. This API is only for admin."
+      tags: [ System ]
+      responses:
+        "200":
+          description: "Set system suspend ok"
+        "500":
+          description: "System failure"
+
+  /system/recover:
+    get:
+      summary: "Recover system to normal"
+      description: "Recover system to normal. This API is only for admin."
+      tags: [System]
+      responses:
+        "200":
+          description: "Set system suspend ok"
+        "500":
+          description: "System failure"
